[package]
name = "wallet_rs"
version = "0.1.0"
authors = ["Szymon Zimnowoda <szymon.zimnowoda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
sha2 = "0.9.5"
hex = "0.4.3"
to-binary = "0.4.0"
log = "0.4.14"
env_logger = "0.8.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
hmac = "0.11.0"
pbkdf2 = { version = "0.8", default-features = false }
test-env-log = "0.2.7"
thiserror = "1.0.25"